base/wekan/namespace.yaml
# base/wekan/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tools
